--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
+{% block login %}
+{% if not user.is_active %}		  	 
+<form action='.' method='post'>
+  {% csrf_token %}
+
+  <label for="username">Логин:</label>
+  <input type="text" name="username" value="" id="username">
+  <label for="password">Пароль:</label>
+  <input type="password" name="password" value="" id="password">
+
+  <input type="submit" value="login" />
+  <input type="hidden" name="next" value="{{ next|escape }}" />
+</form>
+{% endif %}		
+{% endblock %}
 
 {% block content %}
 
-  {% if form.errors %}
-    <p class="error">Сожалеем, вы неправильно ввели логин или пароль</p>
-  {% endif %}
-	 
-	<form action='.' method='post'>
-	  {% csrf_token %}
-
-      <label for="username">Логин:</label>
-      <input type="text" name="username" value="" id="username">
-      <label for="password">Пароль:</label>
-      <input type="password" name="password" value="" id="password">
-
-      <input type="submit" value="login" />
-      <input type="hidden" name="next" value="{{ next|escape }}" />
-	</form>
+{% if form.errors %}
+<p class="error">Сожалеем, вы неправильно ввели логин или пароль</p>
+{% endif %}
 
 {% endblock %}
