--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
- Приветствуем Вас, {{name}}. Ваш аккаунт создан {{date}}.
+ Вы зашли в КальБук, {{user.name}}.
 {% endblock %}
