--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 	  <th>Отдел</th>
 	  <th>Наименование</th>
 	  <th>Место</th>
-	  <th>Цена</th>
+	  <th>Цена, <br><i>руб.</i></th>
 	  <th>X</th>	   
 	</tr>
 	
@@ -66,7 +66,7 @@
 			  {% endfor %} 
 		  </datalist>
 		</th>
-		<th><textarea name="book_pr" rows="1" cols="10"></textarea></th>
+		<th><input name="book_pr" rows="1" cols="10" id="price" value="000000.00"></input></th>
 		<th><input type="submit" value="+"></th>
 	  </form>
 	</tr>	   
