--- a/templates/error.html
+++ b/templates/error.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block all_title %}Ошибка пользователя{% endblock %}
+{% block all_title %}Ошибка.{% endblock %}
 
-{% block content %}
+{% block about %}
 <div class="error-page">
 	<span class="message">{{error}}</span>
 </div>
