--- a/templates/prods.html
+++ b/templates/prods.html
@@ -87,7 +87,7 @@
 
   </table>
 	{% for branch in branchs %}
-	<div style="float: left; width:{{branch.stat}}%; height:16px; background-color:#AABAD7;">&nbsp;</div> <div style="float: none;">&nbsp;&nbsp;{{branch.stat}}% – {{branch.name}}</div>	
+	<div style="float: left; width:{{branch.stat}}%; height:16px; background-color:#AABAD7;">&nbsp;</div> <div style="float: none;">&nbsp;&nbsp;{{branch.stat}}%({{ branch.stat_money }} {{ branch.stat_currency }}) – {{branch.name}}</div>
 	{% endfor %}
 
 
