[new] - content to articles,about,blog

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,9 +5,12 @@
 {% block about %}
 <div>
   <br><br><br>
-  Проект <b>CALBOOK</b> - это домашний финансовый помощник.<br><br>
-  С его помощью Вы сможете вести учет всех своих доходов и расходов.<br>
-  
+  &emsp;&emsp;&emsp;Проект <b>CALBOOK</b> - это домашний финансовый помощник.<br><br>
+  &emsp;&emsp;&emsp;С его помощью Вы сможете вести учет всех своих доходов и расходов.<br>
+    <br><br><br>
+  <div align="center">
+        <img width="30%" height="30%" alt="Просмотреть" src="/media/images/1903.jpg"></a>
+    </div>
 
 
 </div>
