--- a/templates/base.html
+++ b/templates/base.html
@@ -83,21 +83,21 @@
 			</td>
 			<td>
 			  <div align="left">			
-				<font size=3> <a href="/accounts/logout/">
+				<font size=3> <a href="/news/">
 					Новости
 				</a></font>
 			  </div>  
 			</td>
 			<td>
 			  <div align="left">			
-				<font size=3> <a href="/accounts/logout/">
+				<font size=3> <a href="/articles/">
 					Статьи
 				</a></font>
 			  </div>  
 			</td>
 			<td>
 			  <div align="left">			
-				<font size=3> <a href="/accounts/logout/">
+				<font size=3> <a href="/blog/">
 					Блог
 				</a></font>
 			  </div>  
