--- a/templates/base.html
+++ b/templates/base.html
@@ -103,12 +103,19 @@
 			  </div>  
 			</td>
 			<td>
-			  <div align="left">			
+			  <div align="left">
 				<font size=3> <a href="/about">
 					О проекте
 				</a></font>
-			  </div>  
+			  </div>
 			</td>
+            <td>
+              <div align="left">
+                  <font size=3> <a href="/forum">
+                      Форум
+                  </a></font>
+              </div>
+        </td>
 			<td>
 			  <div align="right">
 				{% if user.is_active %}		  
