[new] - news in admin functional

--- a/templates/news.html
+++ b/templates/news.html
@@ -5,17 +5,13 @@
 {% block about %}
 <div>
   <br><br><br><br><br><br>
-
-    <b> &emsp;&emsp;&emsp;   01.01.2012</b> - выпущена online-версия CalBook.
+{% for row in news %}
+    <b> &emsp;&emsp;&emsp;  {{row.date}} </b> - {{row.inf}}
     <br><br><br>
-    <b> &emsp;&emsp;&emsp; 14.01.2010</b> - реализована синхронизация с БД. Появилась возможность обмениваться данными с друзьями.
-    <br><br><br>
-    <b>&emsp;&emsp;&emsp;  01.07.2009</b> - выпущена desctop-версия CalBook.
-    <br><br><br>
+{% endfor %}
+</div>
     <div align="center">
         <img width="30%" height="30%" alt="Просмотреть" src="/media/images/sky.jpg"></a>
     </div>
-
-
 </div>
 {% endblock %}
